[gd_scene load_steps=5 format=2]

[ext_resource path="res://mats/menu/chekbox.gd" type="Script" id=1]
[ext_resource path="res://mats/menu/settings/settings.gd" type="Script" id=2]
[ext_resource path="res://mats/menu/button/button.gd" type="Script" id=3]

[sub_resource type="ImageTexture" id=3]

[node name="settings" type="Panel"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="hbc" type="HBoxContainer" parent="."]
margin_left = 184.0
margin_top = 56.0
margin_right = 225.0
margin_bottom = 88.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="hbc"]
margin_right = 43.0
margin_bottom = 32.0
shortcut_in_tooltip = false
text = "Элемент 0"
icon = SubResource( 3 )
items = [ "Элемент 0", SubResource( 3 ), false, 0, null ]
selected = 0

[node name="vsync" type="Control" parent="."]
anchor_right = 1.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 63.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="vsync"]
margin_right = 36.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "vsync
"

[node name="CheckBox" type="CheckBox" parent="vsync"]
margin_left = 112.0
margin_right = 159.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "On"

[node name="fullscreen" type="Control" parent="."]
anchor_right = 1.0
margin_top = 80.0
margin_bottom = 80.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="fullscreen"]
size_flags_horizontal = 3
text = "fullscreen"

[node name="CheckBox" type="CheckBox" parent="fullscreen"]
margin_left = 110.0
margin_top = -10.0
margin_right = 157.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "On"

[node name="Label" type="Label" parent="."]
margin_top = 105.0
margin_right = 108.0
margin_bottom = 119.0
text = "menu sound       "

[node name="menu_sound" type="HSlider" parent="."]
margin_left = 110.0
margin_top = 100.0
margin_right = 270.0
margin_bottom = 116.0
max_value = 1.0
step = 0.001
value = 0.5

[node name="exit" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 20.0
text = "back"
script = ExtResource( 3 )

[node name="asp" type="AudioStreamPlayer" parent="exit"]
bus = "buttons"

[node name="apply" type="Button" parent="."]
margin_top = 170.0
margin_right = 60.0
margin_bottom = 190.0
text = "apply"
script = ExtResource( 3 )

[node name="asp" type="AudioStreamPlayer" parent="apply"]
bus = "buttons"

[node name="button_sound" type="HSlider" parent="."]
margin_left = 110.0
margin_top = 130.0
margin_right = 270.0
margin_bottom = 146.0
max_value = 1.0
step = 0.001
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 130.0
margin_right = 87.0
margin_bottom = 144.0
text = "button_sound"

[connection signal="apply_button_pressed" from="." to="." method="update_settings"]
[connection signal="resolution_changed" from="." to="." method="_on_UIResolutionSelector_resolution_changed"]
[connection signal="item_selected" from="hbc/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="vsync" to="." method="_on_UIVsyncCheckbox_toggled"]
[connection signal="toggled" from="vsync/CheckBox" to="vsync" method="_on_CheckBox_toggled"]
[connection signal="toggled" from="fullscreen" to="." method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="toggled" from="fullscreen/CheckBox" to="fullscreen" method="_on_CheckBox_toggled"]
[connection signal="button_down" from="exit" to="." method="ex"]
[connection signal="button_down" from="exit" to="exit" method="_on_button_down"]
[connection signal="button_down" from="apply" to="." method="_on_ApplyButton_pressed"]
[connection signal="button_down" from="apply" to="apply" method="_on_button_down"]
